--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <body>
     <ul>
         <h1>TAREA </h1>
-        <a href="./ejer.html">EJERCICIO 1</a>
+        <a href="./1/ejer.html">EJERCICIO 1</a>
         <br>
-        <a href="./ejer2.html">EJERCICIO2</a>
+        <a href="./2/ejer2.html">EJERCICIO2</a>
         <br>
-        <a href="./ejer3.html">EJERCICIO3</a>
+        <a href="./3/ejer3.html">EJERCICIO3</a>
     </ul>
     
 </body>
