--- a/3/ejer3.html
+++ b/3/ejer3.html
@@ -10,7 +10,7 @@
     <main>
         <section class="card">
             <div class="card__img">
-                <img src="./Captura.PNG">
+                <img src="./Captura.png">
             </div>
             <div class="card__detalle">
                 <div class="card__mostrar">
